# number-gen

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  package-lock.json  package.json  pyproject.toml  run_local.py  vercel.json
api/: database.py  index.py  models.py  requirements.txt
public/: index.html  login.html  register.html
scripts/: wipe-database.js
src/: app.py  database.py  index.js  models.py  requirements.txt
src/middleware/: auth.js
src/models/: customer.js  order.js  user.js
src/routes/: auth.js  generate.js
src/templates/: index.html  login.html  register.html
