[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[project]
name = "order-customer-number-generator"
version = "0.1.0"
description = "A Flask web application for generating auto-incrementing order and customer numbers"
requires-python = ">=3.8"
dependencies = [
    "flask==2.3.2",
    "sqlalchemy==2.0.15",
    "psycopg2-binary==2.9.6",
    "python-dotenv==1.0.0",
    "gunicorn==20.1.0"
]

[project.optional-dependencies]
dev = [
    "flake8==6.0.0",
    "black==23.3.0"
]
